[package]
name = "gcd"
version = "1.2.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
description = "Small Rust library (with no dependencies) for calculating greatest common divisor"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/frewsxcv/rust-gcd"
documentation = "https://docs.rs/gcd/"
categories = ["algorithms"]
