[package]
name = "gcd"
version = "2.0.1"
authors = ["Corey Farwell <coreyf@rwell.org>"]
description = "Small Rust library (with no dependencies) for calculating greatest common divisor"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/frewsxcv/rust-gcd"
documentation = "https://docs.rs/gcd/"
categories = ["algorithms"]

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
rand_chacha = "0.2"

[[bench]]
name = "gcd_benchmark"
harness = false
